* Fix border-spacing of infotable
git-svn-id: https://svn.code.sf.net/p/jezvemoney/code-0/trunk@259 47cf728b-45b6-4a0a-a543-cdce7c6e2aab

--- a/css/common.css
+++ b/css/common.css
@@ -114,6 +114,12 @@ select
 }
 
 
+.infotable
+{
+	border-spacing: 0;
+}
+
+
 .infotable tr:nth-child(even)
 {
 	background-color: #E0E0E0;
